--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,1 +1,23 @@
-<p>navigation works!</p>
+<div class="fixed top-0 left-0 w-64 h-full bg-gray-800 text-gray-100 shadow" [ngClass]="{'hidden': !isSidebarOpen}">
+  <div class="flex justify-between items-center h-16 px-6">
+    <span class="text-xl font-bold">Personal blog</span>
+    <button class="text-gray-500 hover:text-gray-400 focus:outline-none focus:text-gray-400" (click)="isSidebarOpen = false">
+      <img src="./assets/img/close.svg" alt="close">
+    </button>
+  </div>
+  <div class="p-6">
+    <app-link href="/" title="Home" />
+    <app-link href="/posts" title="Posts" />
+    <app-link href="/projects" title="Projects" />
+  </div>
+</div>
+
+<button
+  *ngIf="!isSidebarOpen"
+  class="fixed bottom-4 right-4 bg-gray-800 text-gray-100 p-3 rounded-full shadow-lg hover:bg-gray-700 focus:outline-none"
+  (click)="isSidebarOpen = true"
+>
+  <img src="./assets/img/close.svg" alt="close">
+</button>
+
+<router-outlet />
