--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,45 @@
-<p>login works!</p>
+<section>
+  <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
+    <div class="w-full bg-white rounded-lg shadow md:mt-0 sm:max-w-md xl:p-0">
+      <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+        <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
+          Mikhail Bahdashych's blog admin
+        </h1>
+
+        <form class="space-y-4 md:space-y-6" [formGroup]="form" (ngSubmit)="submit()">
+
+          <div>
+            <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your email</label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg block w-full p-2.5"
+              placeholder="name@domain.com"
+              formControlName="email"
+            >
+          </div>
+
+          <div>
+            <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Password</label>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="••••••••"
+              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg block w-full p-2.5"
+              formControlName="password"
+            >
+          </div>
+
+          <button
+            type="submit"
+            class="border border-gray-300 w-full bg-primary-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
+          >Sign in</button>
+
+        </form>
+
+      </div>
+    </div>
+  </div>
+</section>
