--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -1,4 +1,3 @@
-<p>registration works!</p>
 <section>
   <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
     <div class="w-full bg-white rounded-lg shadow md:mt-0 sm:max-w-md xl:p-0">
@@ -41,6 +40,11 @@
             type="submit"
             class="border border-gray-300 w-full bg-primary-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
           >Sign up</button>
+
+          <button
+            type="submit"
+            class="border border-gray-300 w-full bg-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
+          ><app-link href="/login" title="Sign in" /></button>
 
         </form>
 
