global error to global message

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <app-global-error />
+  <app-global-message />
   <app-navigation *ngIf="authService.isLoggedIn$ | async" />
   <router-outlet />
 </div>
