--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
   <app-global-message />
-  <app-navigation *ngIf="authService.isLoggedIn$ | async" />
+  <app-navigation *ngIf="loginService.isLoggedIn$ | async" />
   <router-outlet />
 </div>
