--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -19,6 +19,7 @@
           <div>
             <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Authentication password</label>
             <input
+              type="password"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg block w-full p-2.5"
               formControlName="authPassword"
             >
@@ -41,12 +42,11 @@
             class="border border-gray-300 w-full bg-primary-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
           >Sign up</button>
 
-          <button
-            type="submit"
-            class="border border-gray-300 w-full bg-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
-          ><app-link href="/login" title="Sign in" /></button>
-
         </form>
+
+        <button
+          class="border border-gray-300 w-full bg-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
+        ><app-link href="/login" title="Sign in" /></button>
 
       </div>
     </div>
