--- a/admin-panel/src/app/pages/credentials/login/login.component.html
+++ b/admin-panel/src/app/pages/credentials/login/login.component.html
@@ -2,7 +2,7 @@
   <h1 class="main-title">Mikhail Bahdashych Blog</h1>
   <h2 class="second-title flex">
     <span>Welcome back&nbsp;</span>
-    <basic-emoji emoji="raised-hand.png" [width]="48" [height]="48"/>
+<!--    <basic-emoji emoji="raised-hand.png" [width]="48" [height]="48"/>-->
   </h2>
 </div>
 
@@ -33,6 +33,7 @@
         [disabled]="incorrectCredentials()"
         (buttonClick)="handleLogIn()"
       />
+      <basic-theme-toggle />
     </div>
   </div>
 
