page components and new services

--- a/admin-panel/src/app/pages/credentials/shared/credentials.component.scss
+++ b/admin-panel/src/app/pages/credentials/shared/credentials.component.scss
@@ -1,5 +1,16 @@
 @import 'variables';
 
+.container {
+  width: 100%;
+  height: 100vh;
+  background: var(--bg-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.wrapper {}
+
 .welcome-title {
   text-align: center;
 }
@@ -58,28 +69,6 @@
   }
 }
 
-.window-wrapper-stepped {
-  display: none;
-  width: 500px;
-  border-radius: 8px;
-  box-shadow: var(--card-shadow);
-  padding: 20px;
-  transition: .3s;
-
-  &.show {
-    display: block;
-  }
-}
-
-.window-container-stepped {
-  display: none;
-  justify-content: center;
-
-  &.show {
-    display: flex;
-  }
-}
-
 .last-button {
   margin-top: 20px;
   padding-top: 20px;
@@ -104,6 +93,8 @@
   }
 }
 
-.alt-registration {
-  margin-top: 20px
+.theme-toggle-wrapper {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
 }
