registation component and create password component

--- a/admin-panel/src/app/pages/credentials/registration/registration.component.html
+++ b/admin-panel/src/app/pages/credentials/registration/registration.component.html
@@ -1,3 +1,95 @@
-<div class="container">
-  <div class="wrapper"></div>
-</div>
+<layout-credentials
+  mainTitle="Mikhail Bahdashych Blog"
+  secondTitle="Welcome, nice to see you"
+  titleEmoji="rocket.png"
+>
+  <div class="window-container">
+    <div
+      class="window-wrapper-stepped"
+      [ngClass]="{ 'show': step === 1 }"
+      [@fadeInOut]="true"
+    >
+      <h2 class="third-title">Registration</h2>
+
+      <basic-input
+        label="Provide an email"
+        placeholder="Email"
+        type="email"
+        errorMessage="Wrong email format"
+        [value]="email"
+        (valueChange)="email = $event"
+        (incorrectInput)="incorrectEmail = $event"
+      />
+
+      <page-component-create-password
+        (passwordChange)="password = $event"
+        (incorrectInput)="incorrectPassword = $event"
+      />
+
+      <div class="last-button">
+        <div class="link-wrapper">
+          <basic-link
+            label="Already have an account?"
+            href="/login"
+          />
+        </div>
+        <basic-button
+          label="Create account"
+          (buttonClick)="nextStep()"
+          [disabled]="wrongCredentials()"
+        />
+      </div>
+    </div>
+
+    <div
+      class="window-wrapper-stepped"
+      [ngClass]="{ 'show': step === 2 }"
+      [@fadeInOut]="true"
+    >
+      <h2 class="third-title">Registration</h2>
+      
+      <basic-input
+        label="Provide authentication token"
+        placeholder="Authentication token"
+        type="passphrase"
+        [value]="authToken"
+        (valueChange)="authToken = $event"
+      />
+
+      <basic-button
+        label="Create account"
+        (buttonClick)="handleRegistration()"
+        [disabled]="!authToken"
+        [fillButton]="true"
+      />
+      <div class="last-button">
+        <basic-button
+          label="Go back"
+          (buttonClick)="backStep()"
+        />
+      </div>
+    </div>
+
+    <div
+      class="window-wrapper-stepped"
+      [ngClass]="{ 'show': step === 3 }"
+      [@fadeInOut]="true"
+    >
+      <h2 class="third-title flex">
+        <span>Registartion&nbsp;</span>
+        <basic-emoji emoji="tada.png" [width]="32" [height]="32"/>
+      </h2>
+
+      <p class="paragraph">Registration has been successfully complete!</p>
+      <p class="paragraph">Email with the confirmation link has been successfully sent to the provided email address. Please, make sure you have confirmed your email address in order to continue.</p>
+      <p class="paragraph">Once email address is confirmed, you'll be able to log in.</p>
+
+      <div class="last-button">
+        <basic-button
+          label="Log in"
+          (buttonClick)="handleRedirect('login')"
+        />
+      </div>
+    </div>
+  </div>
+</layout-credentials>
