--- a/admin-panel/src/app/pages/credentials/shared/credentials.component.scss
+++ b/admin-panel/src/app/pages/credentials/shared/credentials.component.scss
@@ -53,3 +53,16 @@
     color: $color-black;
   }
 }
+
+.window-wrapper-stepped {
+  display: none;
+  width: 500px;
+  border-radius: 8px;
+  box-shadow: var(--card-shadow);
+  padding: 20px;
+  transition: .3s;
+
+  &.show {
+    display: block;
+  }
+}
