--- a/admin-panel/src/app/layouts/default/default.layout.html
+++ b/admin-panel/src/app/layouts/default/default.layout.html
@@ -1,9 +1,9 @@
 <div class="page-container">
-<!--  <dashboard-sidebar-->
-<!--    *ngIf="showSideBar"-->
-<!--    [isSidebarOpen]="isSidebarOpen"-->
-<!--    (closeSidebar)="isSidebarOpen = false"-->
-<!--  />-->
+  <dashboard-sidebar
+    *ngIf="showSideBar"
+    [isSidebarOpen]="isSidebarOpen"
+    (closeSidebar)="isSidebarOpen = false"
+  />
 
   <layout-header
     *ngIf="showHeader"
