implementation of security and recovery modules

--- a/src/app/components/basic-components/qr-mfa/qr-mfa.component.html
+++ b/src/app/components/basic-components/qr-mfa/qr-mfa.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="qrCode && showQr" class="qr-code-wrapper">
   <img
     class="qr-code"
-    [ngSrc]="qrCode"
+    [src]="qrCode"
     (click)="showQr = false"
     width="200"
     height="200"
