--- a/src/app/pages/credentials/registration/registration.component.html
+++ b/src/app/pages/credentials/registration/registration.component.html
@@ -1,1 +1,123 @@
-<p>registration works!</p>
+<layout-credentials
+  renderSide="right"
+  headerLink="login"
+  animation="animation4.json"
+  [isAnimation]="true"
+  [width]="500"
+  [height]="500"
+  [mirroredHeader]="true"
+>
+  <div class="welcome-title" [@fadeInOut]="true">
+    <h1 class="main-title">My Personal Blog</h1>
+    <h2 class="second-title flex">
+      <span>Welcome, nice to see you&nbsp;</span>
+      <basic-emoji emoji="rocket.png" [width]="48" [height]="48"/>
+    </h2>
+  </div>
+
+  <div
+    class="window-wrapper-stepped"
+    [ngClass]="{ 'show': step === 1 }"
+    [@fadeInOut]="true"
+  >
+    <h2 class="third-title">Registration</h2>
+    <basic-input
+      type="email"
+      [label]="'Email'"
+      [placeholder]="'Provide your email address'"
+      [errorMessage]="'Wrong email address'"
+      [value]="email"
+      (valueChange)="email = $event"
+      (incorrectInput)="incorrectEmail = $event"
+    />
+
+    <page-component-create-password
+      (passwordChange)="password = $event"
+      (incorrectInput)="incorrectPassword = $event"
+    />
+
+    <div class="last-button">
+      <div class="link-wrapper">
+        <basic-link
+          [label]="'Already have an account?'"
+          href="/login"
+        />
+      </div>
+      <div class="button-wrapper">
+        <basic-button
+          [label]="'Create account'"
+          (buttonClick)="nextStep()"
+          [disabled]="wrongCredentials({ includeAll: false })"
+        />
+      </div>
+    </div>
+  </div>
+
+  <div
+    class="window-wrapper-stepped"
+    [ngClass]="{ 'show': step === 2 }"
+    [@fadeInOut]="true"
+  >
+    <h2 class="third-title">Registration</h2>
+    <basic-input
+      [label]="'First name'"
+      [placeholder]="'Provide your first name'"
+      [inputDescription]="'Field is required in order to continue'"
+      [value]="firstName"
+      [minLength]="1"
+      [maxLength]="64"
+      (valueChange)="firstName = $event"
+      (incorrectInput)="incorrectFirstName = $event"
+    />
+    <basic-input
+      [label]="'Last name'"
+      [placeholder]="'Provide your last name'"
+      [inputDescription]="'Field is required in order to continue'"
+      [value]="lastName"
+      [minLength]="1"
+      [maxLength]="64"
+      (valueChange)="lastName = $event"
+      (incorrectInput)="incorrectLastName = $event"
+    />
+    <basic-checkbox
+      [checked]="false"
+      (checkedChange)="tac = $event"
+    >
+      <span content class="tac-box">
+        I accept&nbsp;<basic-link
+        [label]="'Terms & Conditions'" href="/terms-and-conditions"
+      />
+      </span>
+    </basic-checkbox>
+    <div class="last-button">
+      <basic-button
+        [label]="'Create account'"
+        (buttonClick)="handleRegistration()"
+        [disabled]="wrongCredentials({ includeAll: true })"
+        [fillButton]="true"
+      />
+    </div>
+  </div>
+
+  <div
+    class="window-wrapper-stepped"
+    [ngClass]="{ 'show': step === 3 }"
+    [@fadeInOut]="true"
+  >
+    <h2 class="third-title flex">
+      <span>Registration&nbsp;</span>
+      <basic-emoji emoji="tada.png" [width]="32" [height]="32"/>
+    </h2>
+
+    <p class="paragraph">Registration has been successfully complete!</p>
+    <p class="paragraph">Email with the confirmation link has been successfully sent to the provided email address. Please, make sure you have confirmed your email address in order to continue.</p>
+    <p class="paragraph">Once email address is confirmed, you'll be able to log in.</p>
+
+    <div class="last-button">
+      <basic-button
+        [label]="'Log In'"
+        (buttonClick)="handleRedirect('login')"
+      />
+    </div>
+  </div>
+</layout-credentials>
