--- a/src/libs/styles/variables.scss
+++ b/src/libs/styles/variables.scss
@@ -184,7 +184,7 @@ p, spam, ul, li, ol {
   opacity: .85;
 }
 
-@mixin light() {
+:root {
   --bg-color: #{$color-white};
   --main-color: #{$color-main};
   --main-color-hover: #{$color-main-hover};
@@ -208,32 +208,5 @@ p, spam, ul, li, ol {
   --alert-shadow: #{rgba($black, 0.1) 0 10px 50px};
   --color-hover: #{$color-shadow-hover-light};
   --loader-background: #{rgba($color-white, 1) 0 0 no-repeat padding-box};
-  --transparent-background: #{rgba($color-black, .5) 0 0 no-repeat padding-box};
-}
-
-@mixin dark() {
-  --bg-color: #{$color-black-background};
-  --main-color: #{$color-main};
-  --main-color-hover: #{darken($color-main-hover, 30%)};
-  --main-color-border: #{rgba($color-main-border, .5)};
-  --text-color: #{$color-white};
-  --paragraph-color: #{rgba($color-white, .85)};
-  --border-color: #{rgba($color-white, .3)};
-  --border-color-dark: #{rgba($color-black, .1)};
-  --disabled-color: #{rgba($color-white, .1)};
-  --success-color: #{$success-color};
-  --success-color-svg: #{$success-color-svg};
-  --error-color-light: #{$error-color};
-  --error-color-light-svg: #{$error-color-svg};
-  --warning-color: #{$warning-color};
-  --warning-color-svg: #{$warning-color-svg};
-  --svg-color: #{$svg-color-light};
-  --svg-color-main: #{$svg-color-main};
-  --error-color: #{$color-error};
-  --input-shadow: #{0 0 5px rgba(255, 255, 255, 0.3)};
-  --card-shadow: #{rgba($color-shadow-dark, 0.3) 0px 1px 2px 0px, rgba($color-shadow-dark, 0.15) 0px 2px 6px 2px};
-  --alert-shadow: #{rgba($color-white, 0.1) 0 10px 50px};
-  --color-hover: #{$color-shadow-hover-dark};
-  --loader-background: #{rgba($color-black-background, 1) 0 0 no-repeat padding-box};
   --transparent-background: #{rgba($color-black, .5) 0 0 no-repeat padding-box};
 }
