ngx-editor configuration

--- a/src/app/pages/dashboard/create-post/create-post.component.html
+++ b/src/app/pages/dashboard/create-post/create-post.component.html
@@ -32,112 +32,24 @@
       </div>
     </div>
 
-    <div class="toc-wrapper">
-      <div class="toc-section-buttons">
-        <div class="toc-section-button margin-right">
-          <basic-button [label]="'Add section'" (buttonClick)="addSection()"/>
-        </div>
-        <div class="toc-section-button margin-left">
-          <basic-button
-            [fillButton]="true"
-            [label]="'Create post'"
-            [disabled]="disableCreatePostButton()"
-            (buttonClick)="createPost()"
-          />
-        </div>
-      </div>
-      <dashboard-table-of-contents [sections]="sections" />
+    <div class="NgxEditor__Wrapper">
+      <ngx-editor-menu [editor]="editor" [toolbar]="toolbar"></ngx-editor-menu>
+      <ngx-editor
+        [editor]="editor"
+        [ngModel]="html"
+        (ngModelChange)="onHtmlChange($event)"
+        [disabled]="false"
+        [placeholder]="'Let\'s write something!'"
+      ></ngx-editor>
     </div>
 
-    <div *ngFor="let section of sections; let i = index">
-      <basic-input
-        [label]="'Section Name'"
-        [placeholder]="'Provide the name of the section'"
-        [value]="section.name"
-        (valueChange)="section.name = $event"
+    <div class="create-button-wrapper">
+      <basic-button
+        [fillButton]="true"
+        [label]="'Create post'"
+        [disabled]="disableCreatePostButton()"
+        (buttonClick)="createPost()"
       />
-
-      <basic-textarea
-        [label]="'Section Content'"
-        [placeholder]="'Content of the current section'"
-        [value]="section.content"
-        (valueChange)="section.content = $event"
-      />
-
-      <div class="section-buttons">
-        <div class="section-button margin-right">
-          <basic-button
-            *ngIf="section.level < 3"
-            [label]="'Add Subsection'"
-            (buttonClick)="addSubSection(section)"
-          />
-        </div>
-        <div class="section-button margin-left">
-          <basic-button
-            *ngIf="section.level < 3"
-            [label]="'Delete Section'"
-            [danger]="true"
-            (buttonClick)="deleteSection(i)"
-          />
-        </div>
-      </div>
-
-      <div *ngFor="let subsection of section.subsections; let j = index">
-        <basic-input
-          [label]="'Subsection Name'"
-          [placeholder]="'Provide the name of the subsection'"
-          [value]="subsection.name"
-          (valueChange)="subsection.name = $event"
-        />
-
-        <basic-textarea
-          [label]="'Subsection Content'"
-          [placeholder]="'Content of the current subsection'"
-          [value]="subsection.content"
-          (valueChange)="subsection.content = $event"
-        />
-
-        <div class="section-buttons">
-          <div class="section-button margin-right">
-            <basic-button
-              *ngIf="section.level < 3"
-              [label]="'Add Subsection'"
-              (buttonClick)="addSubSection(subsection)"
-            />
-          </div>
-          <div class="section-button margin-left">
-            <basic-button
-              *ngIf="section.level < 3"
-              [label]="'Delete Subsection'"
-              [danger]="true"
-              (buttonClick)="deleteSubSection(section, j)"
-            />
-          </div>
-        </div>
-
-        <div *ngFor="let subsubsection of subsection.subsections; let k = index">
-          <basic-input
-            [label]="'Sub-subsection Name'"
-            [placeholder]="'Provide the name of the sub-subsection'"
-            [value]="subsubsection.name"
-            (valueChange)="subsubsection.name = $event"
-          />
-
-          <basic-textarea
-            [label]="'Sub-subsection Content'"
-            [placeholder]="'Content of the current sub-subsection'"
-            [value]="subsubsection.content"
-            (valueChange)="subsubsection.content = $event"
-          />
-
-          <basic-button
-            *ngIf="section.level < 3"
-            [label]="'Delete Sub-subsection'"
-            [danger]="true"
-            (buttonClick)="deleteSubSection(subsection, k)"
-          />
-        </div>
-      </div>
     </div>
   </div>
 </layout-default>
