--- a/src/app/components/dashboard-components/sidebar/sidebar.component.html
+++ b/src/app/components/dashboard-components/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
         <div class="sidebar-button-wrapper">
           <basic-button
             [label]="'Create post'"
-            (buttonClick)="handleRedirect('account/create-post')"
+            (buttonClick)="handleRedirect('account/create-article')"
           />
         </div>
         <div class="sidebar-button-wrapper">
