article preview mode and edition page

--- a/src/app/layouts/default/default.layout.html
+++ b/src/app/layouts/default/default.layout.html
@@ -12,7 +12,10 @@
     (openSidebar)="isSidebarOpen = true"
   />
 
-  <div class="content-wrapper">
+  <div
+    class="content-wrapper"
+    [ngClass]="{ 'no-footer': !showFooter, 'no-header': !showHeader }"
+  >
     <ng-content />
   </div>
 
