--- a/src/app/pages/dashboard/create-article/create-article.component.html
+++ b/src/app/pages/dashboard/create-article/create-article.component.html
@@ -53,7 +53,7 @@
         [src]="articlePicture"
         (click)="articlePicture = ''"
         class="article-main-picture"
-        alt="avatar"
+        alt="article-picture"
       />
     </div>
 
