--- a/src/app/pages/dashboard/article/article.component.scss
+++ b/src/app/pages/dashboard/article/article.component.scss
@@ -2,7 +2,7 @@
 
 .article-wrapper {
   width: 60%;
-  margin: 30px auto 150px auto;
+  margin: 30px auto;
 }
 
 .article-mgmt-buttons {
@@ -35,4 +35,137 @@
   border-radius: 5px;
   border: 1px solid var(--border-color);
   margin-right: 5px;
+}
+
+.preview-wrapper {
+  background-color: #1a1a1a;
+}
+
+.hero-section {
+  display: flex;
+  overflow: hidden;
+  height: 35vh;
+  min-height: 35vh;
+  padding: 5vw 5vw 2.5vw;
+  justify-content: flex-start;
+  align-items: flex-end;
+
+  @media screen and (max-width: 991px) {
+    height: 70vh;
+  }
+
+  @media screen and (max-width: 479px) {
+    padding-bottom: 5vw;
+  }
+}
+
+.blog-post-header-wrapper {
+  flex-direction: column;
+  align-items: flex-start;
+  width: 50vw;
+  display: flex;
+
+  @media screen and (max-width: 991px) {
+    width: 90vw;
+  }
+}
+
+.blog-category-link {
+  border-bottom-style: none;
+  font-weight: 300;
+  color: white;
+}
+
+.blog-article-heading {
+  width: 50vw;
+  margin-top: .25em;
+  margin-bottom: .25em;
+  font-size: 4rem;
+  font-weight: 500;
+  line-height: .85;
+  color: white;
+
+  @media screen and (max-width: 991px) {
+    width: 90vw;
+  }
+
+  @media screen and (max-width: 767px) {
+    font-size: 10vw;
+  }
+
+  @media screen and (max-width: 479px) {
+    font-size: 15vw;
+  }
+}
+
+.blog-additional-info {
+  font-family: Roboto Mono, sans-serif;
+  font-size: var(--standard-subheading);
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 300;
+  color: white;
+}
+
+.main-image-section {
+  padding: 2.5vw 5vw;
+}
+
+.image-wrapper {
+  object-fit: cover;
+  width: 100%;
+  overflow: hidden;
+}
+
+.image-cover {
+  object-fit: cover;
+  width: 100%;
+  height: 30vh;
+  margin-bottom: 18px;
+}
+
+.blog-article-section {
+  justify-content: center;
+  padding: 2.5vw 5vw;
+  display: flex;
+}
+
+.rich-text-block {
+  font-size: var(--standard-subheading);
+  width: 50vw;
+
+  @media screen and (max-width: 991px) {
+    width: 90vw;
+  }
+}
+
+.post-tags-wrapper {
+  display: flex;
+  margin: 20px 0;
+}
+
+.post-tag {
+  padding: 8px;
+  border-radius: 5px;
+  border: 1px solid var(--border-color);
+  margin-right: 5px;
+}
+
+.edit-button-wrapper {
+  margin: 20px 0;
+}
+
+.select-photo-btn-wrapper {
+  margin: 20px 0;
+}
+
+.article-main-picture {
+  cursor: pointer;
+  object-fit: cover;
+}
+
+.picture-preview {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
 }
