--- a/src/libs/styles/variables.scss
+++ b/src/libs/styles/variables.scss
@@ -180,6 +180,122 @@ h1, h2, h3, h4, h5, p, span, ul, li, ol {
   color: var(--paragraph-color);
 }
 
+.rich-text-block h1 {
+  font-family: Montserrat, sans-serif;
+  color: #fff;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.rich-text-block h2 {
+  color: #fff;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-family: Montserrat, sans-serif;
+  font-size: 1.75rem;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.rich-text-block h3 {
+  color: #fff;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-family: Montserrat, sans-serif;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.rich-text-block h4 {
+  color: #fff;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: Montserrat, sans-serif;
+  font-size: 1.25rem;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.rich-text-block h5 {
+  color: #fff;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: Montserrat, sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.rich-text-block h6 {
+  color: #fff;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: Montserrat, sans-serif;
+  font-size: .75rem;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.rich-text-block p {
+  font-family: var(--secondary-font), sans-serif;
+  color: #cacaca;
+  margin-bottom: 10px;
+  line-height: 1.5;
+}
+
+.rich-text-block a {
+  border-bottom: 1px solid var(--lines);
+  color: #fff;
+  font-family: Roboto Mono, sans-serif;
+  font-size: 1rem;
+  line-height: 1.5;
+  text-decoration: none;
+  transition: all .35s;
+
+  &:hover {
+    border-bottom-color: #fff;
+  }
+}
+
+.rich-text-block ul {
+  color: #fff;
+  margin-top: 0;
+  margin-bottom: 10px;
+  padding-left: 40px;
+  font-family: Roboto Mono, sans-serif;
+  font-size: 1em;
+}
+
+.rich-text-block ol {
+  color: #fff;
+  margin-top: 0;
+  margin-bottom: 10px;
+  padding-left: 40px;
+  font-family: Roboto Mono, sans-serif;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.rich-text-block li {
+  color: #fff;
+  font-family: Roboto Mono, sans-serif;
+  font-size: 1rem;
+}
+
+.rich-text-block blockquote {
+  color: #fff;
+  border-left: 5px solid #e2e2e2;
+  margin-bottom: 10px;
+  padding: 10px 20px;
+  font-family: Roboto Mono, sans-serif;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
 :root {
   --bg-color: #{$color-white};
   --main-color: #{$color-main};
@@ -205,4 +321,5 @@ h1, h2, h3, h4, h5, p, span, ul, li, ol {
   --color-hover: #{$color-shadow-hover-light};
   --loader-background: #{rgba($color-white, 1) 0 0 no-repeat padding-box};
   --transparent-background: #{rgba($color-black, .5) 0 0 no-repeat padding-box};
+  --standard-subheading: .75rem;
 }
