--- a/src/app/pages/dashboard/create-article/create-article.component.scss
+++ b/src/app/pages/dashboard/create-article/create-article.component.scss
@@ -45,3 +45,15 @@
   display: flex;
   justify-content: center;
 }
+
+.language-selection-buttons {
+  display: flex;
+}
+
+.language-selection-button {
+  width: 100%;
+
+  &.margin {
+    margin: 0 5px
+  }
+}
