--- a/src/app/components/basic-components/pagination/pagination.component.html
+++ b/src/app/components/basic-components/pagination/pagination.component.html
@@ -1,79 +1,82 @@
-<div class="pagination-container" *ngIf="totalPages > 1">
-  <div class="pagination-box left">
-    <basic-button
-      class="pagination-page-button"
-      [label]="'<<'"
-      [onWhite]="onWhite"
-      (buttonClick)="goToStartPage()"
-    />
-    <basic-button
-      class="pagination-page-button margin-left"
-      [label]="'<'"
-      [onWhite]="onWhite"
-      (buttonClick)="setNewCurrentPage(-1)"
-    />
+<ng-container *transloco="let t">
+  <div class="pagination-container" *ngIf="totalPages > 1">
+    <div class="pagination-box left">
+      <basic-button
+        class="pagination-page-button"
+        [label]="'<<'"
+        [onWhite]="onWhite"
+        (buttonClick)="goToStartPage()"
+      />
+      <basic-button
+        class="pagination-page-button margin-left"
+        [label]="'<'"
+        [onWhite]="onWhite"
+        (buttonClick)="setNewCurrentPage(-1)"
+      />
+    </div>
+
+    <div class="pagination-box">
+      <basic-button
+        class="pagination-page-button margin-right"
+        [label]="'1'"
+        [onWhite]="onWhite"
+        [fillButton]="currentPageInt === 1"
+        (buttonClick)="goToStartPage()"
+      />
+      <basic-button
+        class="pagination-page-button"
+        *ngIf="showPageIndicator()"
+        [label]="currentPageInt.toString()"
+        [onWhite]="onWhite"
+        [disabled]="true"
+      />
+      <basic-button
+        class="pagination-page-button margin-left"
+        [label]="totalPages.toString()"
+        [fillButton]="currentPageInt === totalPages"
+        [onWhite]="onWhite"
+        (buttonClick)="goToEndPage()"
+      />
+    </div>
+
+    <div class="pagination-box right">
+      <basic-button
+        class="pagination-page-button margin-right"
+        [label]="'>'"
+        [onWhite]="onWhite"
+        (buttonClick)="setNewCurrentPage(1)"
+      />
+      <basic-button
+        class="pagination-page-button"
+        [label]="'>>'"
+        [onWhite]="onWhite"
+        (buttonClick)="goToEndPage()"
+      />
+    </div>
   </div>
 
-  <div class="pagination-box">
-    <basic-button
-      class="pagination-page-button margin-right"
-      [label]="'1'"
-      [onWhite]="onWhite"
-      [fillButton]="currentPageInt === 1"
-      (buttonClick)="goToStartPage()"
-    />
-    <basic-button
-      class="pagination-page-button"
-      *ngIf="showPageIndicator()"
-      [label]="currentPageInt.toString()"
-      [onWhite]="onWhite"
-      [disabled]="true"
-    />
-    <basic-button
-      class="pagination-page-button margin-left"
-      [label]="totalPages.toString()"
-      [fillButton]="currentPageInt === totalPages"
-      [onWhite]="onWhite"
-      (buttonClick)="goToEndPage()"
-    />
+  <div class="pagination-button-container">
+    <div class="pagination-button margin-right">
+      <basic-dropdown
+        class="items-per-page-input"
+        [label]="itemsPerPageLabel"
+        [options]="itemsPerPageOptions"
+        [defaultValue]="selectedPaginationOption"
+        [onWhite]="onWhite"
+        (selectedOption)="setNewItemsPerPage($event)"
+      />
+    </div>
+    <div class="pagination-button margin-left">
+      <basic-input
+        type="number"
+        [min]="'1'"
+        [label]="t('input.goToPageLabel')"
+        [placeholder]="t('input.pagePlaceholder')"
+        [value]="currentPageInt.toString()"
+        [onWhite]="onWhite"
+        (valueChange)="manuallySetThePage($event)"
+      />
+    </div>
   </div>
 
-  <div class="pagination-box right">
-    <basic-button
-      class="pagination-page-button margin-right"
-      [label]="'>'"
-      [onWhite]="onWhite"
-      (buttonClick)="setNewCurrentPage(1)"
-    />
-    <basic-button
-      class="pagination-page-button"
-      [label]="'>>'"
-      [onWhite]="onWhite"
-      (buttonClick)="goToEndPage()"
-    />
-  </div>
-</div>
-
-<div class="pagination-button-container">
-  <div class="pagination-button margin-right">
-    <basic-dropdown
-      class="items-per-page-input"
-      [label]="itemsPerPageLabel"
-      [options]="itemsPerPageOptions"
-      [defaultValue]="selectedPaginationOption"
-      [onWhite]="onWhite"
-      (selectedOption)="setNewItemsPerPage($event)"
-    />
-  </div>
-  <div class="pagination-button margin-left">
-    <basic-input
-      type="number"
-      [min]="'1'"
-      [label]="'Go to page'"
-      [placeholder]="'Page'"
-      [value]="currentPageInt.toString()"
-      [onWhite]="onWhite"
-      (valueChange)="manuallySetThePage($event)"
-    />
-  </div>
-</div>
+</ng-container>
