--- a/src/app/pages/dashboard/create-article/create-article.component.html
+++ b/src/app/pages/dashboard/create-article/create-article.component.html
@@ -1,88 +1,115 @@
 <layout-default
   [userInfo]="userInfo"
 >
-  <div class="create-post-wrapper">
-    <h1>Create new article</h1>
-    <basic-input
-      [label]="'Article name'"
-      [placeholder]="'Provide the name of the article'"
-      [inputDescription]="'The name of the article will be the main title seen by users, also, this name will be used in slug'"
-      [value]="articleName"
-      (valueChange)="articleName = $event"
-    />
-    <basic-input
-      [label]="'Article description'"
-      [placeholder]="'Provide the description of the article'"
-      [inputDescription]="'The description is going to be used as a short introduction to the article'"
-      [value]="articleDescription"
-      (valueChange)="articleDescription = $event"
-    />
-    <basic-input
-      [label]="'Article tags'"
-      [placeholder]="'Provide the tags of the article'"
-      [inputDescription]="'Use space bar in order to push the tag to the list of article tags'"
-      [value]="articleTag"
-      (valueChange)="articleTag = $event"
-      (onSpace)="addArticleTag()"
-    />
+  <ng-container *transloco="let t">
+    <div class="create-post-wrapper">
+      <h1>{{ t('articles.createArticleTitle') }}</h1>
 
-    <div class="post-tags-wrapper" *ngIf="articleTags">
-      <div *ngFor="let articleTag of articleTags">
-        <p class="post-tag" (click)="deleteArticleTag(articleTag)">{{ articleTag }}</p>
+      <div class="language-selection-buttons">
+        <div class="language-selection-button">
+          <basic-button
+            [label]="'PL'"
+            [fillButton]="articleLanguage === 'PL'"
+            (buttonClick)="changeArticleLanguage('PL')"
+          />
+        </div>
+        <div class="language-selection-button margin">
+          <basic-button
+            [label]="'EN'"
+            [fillButton]="articleLanguage === 'EN'"
+            (buttonClick)="changeArticleLanguage('EN')"
+          />
+        </div>
+        <div class="language-selection-button">
+          <basic-button
+            [label]="'RU'"
+            [fillButton]="articleLanguage === 'RU'"
+            (buttonClick)="changeArticleLanguage('RU')"
+          />
+        </div>
+      </div>
+
+      <basic-input
+        [label]="t('input.articleNameLabel')"
+        [placeholder]="t('input.articleNamePlaceholder')"
+        [inputDescription]="t('input.articleNameDesc')"
+        [value]="articleName"
+        (valueChange)="modifyArticleName($event)"
+      />
+      <basic-input
+        [label]="t('input.articleDescLabel')"
+        [placeholder]="t('input.articleDescPlaceholder')"
+        [inputDescription]="t('input.articleDescDesc')"
+        [value]="articleDescription"
+        (valueChange)="modifyArticleDesc($event)"
+      />
+      <basic-input
+        [label]="t('input.articleTagsLabel')"
+        [placeholder]="t('input.articleTagsPlaceholder')"
+        [inputDescription]="t('input.articleTagsDesc')"
+        [value]="articleTag"
+        (valueChange)="modifyArticleTag($event)"
+        (onSpace)="addArticleTag()"
+      />
+
+      <div class="post-tags-wrapper" *ngIf="articleTags">
+        <div *ngFor="let articleTag of articleTags">
+          <p class="post-tag" (click)="deleteArticleTag(articleTag)">{{ articleTag }}</p>
+        </div>
+      </div>
+
+      <div class="article-category-dropdown">
+        <basic-dropdown
+          [options]="categoriesDropdown"
+          (selectedOption)="selectArticleCategory($event)"
+          [defaultLabel]="t('dropdown.articleCategory')"
+        />
+      </div>
+
+      <div class="select-photo-btn-wrapper">
+        <basic-button
+          [label]="t('button.selectPhoto')"
+          (click)="fileInput.click()"
+        />
+      </div>
+
+      <div class="picture-preview">
+        <img
+          *ngIf="articlePicture"
+          [src]="articlePicture"
+          (click)="clearArticlePicture()"
+          class="article-main-picture"
+          alt="article-picture"
+        />
+      </div>
+
+      <input
+        type="file"
+        accept="image/*"
+        (change)="selectFile($event)"
+        #fileInput
+        hidden
+      />
+
+      <div class="NgxEditor__Wrapper">
+        <ngx-editor-menu [editor]="editor" [toolbar]="toolbar"/>
+        <ngx-editor
+          [editor]="editor"
+          [(ngModel)]="htmlContent"
+          (ngModelChange)="onHtmlChange($event)"
+          [disabled]="false"
+          [placeholder]="t('input.htmlEditorPlaceholder')"
+        />
+      </div>
+
+      <div class="create-button-wrapper">
+        <basic-button
+          [fillButton]="true"
+          [label]="t('button.createArticle')"
+          [disabled]="disableCreatePostButton()"
+          (buttonClick)="createArticle()"
+        />
       </div>
     </div>
-
-    <div class="article-category-dropdown">
-      <basic-dropdown
-        [options]="categoriesDropdown"
-        (selectedOption)="selectArticleCategory($event)"
-        [defaultLabel]="'Select article category'"
-      />
-    </div>
-
-    <div class="select-photo-btn-wrapper">
-      <basic-button
-        [label]="'Select photo'"
-        (click)="fileInput.click()"
-      />
-    </div>
-
-    <div class="picture-preview">
-      <img
-        *ngIf="articlePicture"
-        [src]="articlePicture"
-        (click)="articlePicture = ''"
-        class="article-main-picture"
-        alt="article-picture"
-      />
-    </div>
-
-    <input
-      type="file"
-      accept="image/*"
-      (change)="selectFile($event)"
-      #fileInput
-      hidden
-    />
-
-    <div class="NgxEditor__Wrapper">
-      <ngx-editor-menu [editor]="editor" [toolbar]="toolbar"/>
-      <ngx-editor
-        [editor]="editor"
-        [(ngModel)]="htmlContent"
-        (ngModelChange)="onHtmlChange($event)"
-        [disabled]="false"
-        [placeholder]="'Let\'s write something!'"
-      />
-    </div>
-
-    <div class="create-button-wrapper">
-      <basic-button
-        [fillButton]="true"
-        [label]="'Create article'"
-        [disabled]="disableCreatePostButton()"
-        (buttonClick)="createArticle()"
-      />
-    </div>
-  </div>
+  </ng-container>
 </layout-default>
